added food group filter to nutrient reports
